fixed colours on hover

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
       font-size: 20px;
     }
     a:hover {
-      color: rgb(182, 255, 175);
-      text-shadow: 1px 1px 4px rgb(0,216,0), 0 0 1em rgb(0,200,0), 0 0 0.2em rgb(0,180,0);
+      color: rgb(175, 252, 255);
+      text-shadow: 1px 1px 4px rgb(27, 228, 255), 0 0 1em rgb(38, 241, 255), 0 0 0.2em rgb(158, 249, 255);
       font-size: 30px;
     }
     h1 {
@@ -96,7 +96,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
     } else {
       const cursor = document.createElement('span');
       cursor.className = 'cursor';
-      terminal.appendChild(cursor);
+      terminal.appendChild(cursor)
 
       sound.play();
 
